<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical">

  <FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center_vertical"
      android:orientation="horizontal">

      <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_1x"
        android:src="@drawable/indicator_circle" />

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_half"
        android:text="@string/label_drive_history"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/textColorPrimary"
        android:textStyle="bold" />

      <ImageButton
        android:id="@+id/historyHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:src="@drawable/ic_help_black_24dp"
        android:tint="@color/grey2" />
    </LinearLayout>

    <LinearLayout
      android:id="@+id/refreshHistories"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="end|center_vertical"
      android:background="@drawable/button_bg_accent"
      android:gravity="center"
      android:orientation="horizontal"
      android:paddingStart="@dimen/spacing_half"
      android:paddingTop="@dimen/spacing_quarter"
      android:paddingEnd="@dimen/spacing_1x"
      android:paddingBottom="@dimen/spacing_quarter">

      <ImageView
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginEnd="@dimen/spacing_quarter"
        android:src="@drawable/ic_refresh_black_24dp"
        android:tint="@android:color/white" />

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_common_update"
        android:textColor="@android:color/white" />

    </LinearLayout>

  </FrameLayout>

  <View
    android:layout_width="match_parent"
    android:layout_height="2dp"
    android:layout_marginTop="@dimen/spacing_1x"
    android:layout_marginBottom="@dimen/spacing_1x"
    android:background="@color/grey" />

  <FrameLayout
    android:id="@+id/historyLayer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/recyclerView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:clipToPadding="false"
      android:paddingBottom="@dimen/spacing_10x"
      app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <Button
      android:id="@+id/more"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="bottom"
      android:background="?android:attr/selectableItemBackground"
      android:text="@string/label_common_more"
      android:textColor="@color/colorAccent"
      android:visibility="gone" />
  </FrameLayout>

  <LinearLayout
    android:id="@+id/historyNoneLayer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:layout_marginTop="@dimen/spacing_1x"
    android:background="@drawable/bg_box_edge_grey"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="@dimen/spacing_2x"
    android:paddingTop="@dimen/spacing_3x"
    android:paddingEnd="@dimen/spacing_2x"
    android:paddingBottom="@dimen/spacing_3x">

    <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/ic_warning_g" />

    <TextView
      android:id="@+id/historyNoneMessage"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginTop="@dimen/spacing_2x"
      android:gravity="center"
      android:text="@string/label_drive_history_empty"
      android:textAppearance="@style/TextAppearance.AppCompat.Title"
      android:textColor="@color/grey"
      android:textStyle="bold" />
  </LinearLayout>

</LinearLayout>